--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.25.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,9 +23,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "node": "^22.7.0",
-    "nodemon": "^3.1.4",
-    "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/core": "^7.17.9"
+    "nodemon": "^3.1.4"
   }
 }
